[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlocker_expiryaddon"
version = "0.1.3"
description = "A Plugin for Resource Locker Project to implement expiry logic"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jim Erginbash", email = "jimshapedcoding@gmail.com"}
]
keywords = ["Rlocker", "rlocker", "ResourceLocker", "Python 3", "Resource Locker"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/jimdevops19/rlocker_expiry_addon.git"
Download = "https://pypi.org/project/rlocker_expiry_addon/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["expiry_addon*"]

[tool.setuptools.package-data]
expiry_addon = [
    "templates/**/*.html",
]
